LocalでPull成功した後、担当者にLineworksを通信する機能を追加

--- a/localautopull/readme.env
+++ b/localautopull/readme.env
@@ -10,3 +10,7 @@ messagingSenderId   =
 localForlderPath    =
 gitlabAccount       =
 gitlabPassword      =
+#Lineworks Infomation
+API_ID              =""
+CONSUMER_KEY        =""
+TOKEN               =""
