--- a/localautopull/package.json
+++ b/localautopull/package.json
@@ -10,8 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "child_process": "^1.0.2",
+    "date-utils": "^1.2.21",
     "dotenv": "^4.0.0",
     "firebase": "^4.7.0",
-    "fs": "0.0.1-security"
+    "fs": "0.0.1-security",
+    "request": "^2.83.0"
   }
 }
